--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -28,10 +28,12 @@ body:
         e.g. "catalog github rate limited", "http root service configurer", "scaffolder template include", "entity card title"
     validations:
       required: true
+  - type: markdown # empty space
+    attributes:
+      value: ''
   - type: markdown
     attributes:
       value: |
-        <br/>
         ## Defining the bug
 
         Defining the bug accurately will help ensure that it is identified and fixed correctly.
@@ -100,10 +102,12 @@ body:
         Describe the behavior or result that you expected instead of the observed one.
 
         e.g. "I expect the catalog index page to overheat my CPU"
+  - type: markdown # empty space
+    attributes:
+      value: ''
   - type: markdown
     attributes:
       value: |
-        <br/>
         ## Reproducing the bug
 
         Being able to easily reproduce the bug will significantly increase the likelyhook that it can be identified and fixed. Please provide a repository where the bug can be reproduced, unless this is a critical bug that needs immediate attention.
