--- a/.github/ISSUE_TEMPLATE/feature.yaml
+++ b/.github/ISSUE_TEMPLATE/feature.yaml
@@ -9,7 +9,7 @@ body:
       value: |
         This template lets you suggest new features for Backstage. When filling in the template you can keep it as lightweight as you want, but be sure to go into enough detail to allow reviewers to understand and respond to the proposal.
 
-        If this is a very advanced or large addition, you might want to consider creating a [Backstage Enhancement Proposal (BEP)](https://github.com/backstage/backstage/blob/master/beps/README.md) instead, as that process has better facilitation of discussions around details of the proposal. Don't worry though, you can always convert the issue to a BEP later.
+        If this is a complex addition, you may want to consider creating a [Backstage Enhancement Proposal](https://github.com/backstage/backstage/blob/master/beps/README.md) (BEP) instead, as that process simplifies discussions and iteration around details in the proposal. Don't worry though, you can always convert the issue to a BEP later.
   - type: checkboxes
     id: issue-labels
     attributes:
@@ -23,7 +23,7 @@ body:
       label: '🔎 Search Terms'
       render: plain
       description: |
-        What search terms did you use when trying to find an existing bug report?
+        What search terms did you use when trying to find an existing feature proposal?
       placeholder: |
         List of keywords you searched for before creating this issue. Write them down here so that others can find this bug more easily and help provide feedback.
 
@@ -63,7 +63,7 @@ body:
       label: '🔖 Need'
       description: What's the reasoning behind this change, who does it benefit?
       placeholder: |
-        Explain why this change is important and who it can benefit. It can also be useful to provide some context for the change as well, for example highlighting past work that has been done in the area.
+        Explain why this change is important and who it can benefit. It can also be helpful to provide context for the change, for example highlighting past work that has been done in the area.
   - type: textarea
     id: proposal
     validations:
@@ -74,7 +74,7 @@ body:
       placeholder: |
         Describe the proposal in as much detail as needed for reviewers to give concrete feedback.
 
-        It can sometimes be helpful to incude design details such as new TypeScript examples, database schema, or sequence diagrams.
+        Including an proposed implementation is optional, but if you do it can be helpful to incude design details such as new TypeScript examples, database schema, or sequence diagrams.
 
         If the change require particular care when being rolled out, it can also be helpful to for example include a plan for a phased release.
   - type: textarea
