--- a/.github/ISSUE_TEMPLATE/other.yaml
+++ b/.github/ISSUE_TEMPLATE/other.yaml
@@ -1,4 +1,4 @@
-name: '❓` Other'
+name: '❓ Other'
 description: 'Something not captured by any other template'
 body:
   - type: markdown
@@ -16,7 +16,5 @@ body:
           required: true
   - type: textarea
     id: contents
-    attributes:
-      label: Comment
     validations:
       required: true
