--- a/.github/ISSUE_TEMPLATE/other.yaml
+++ b/.github/ISSUE_TEMPLATE/other.yaml
@@ -16,5 +16,7 @@ body:
           required: true
   - type: textarea
     id: contents
+    attributes:
+      label: Content
     validations:
       required: true
