--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -1,7 +1,7 @@
-name: '🐛 Bug Report'
+name: '🪲 Bug Report'
 description: 'Report a bug that you have encountered'
 labels:
-  - bug
+  - type:bug
   - status:needs-triage
 body:
   - type: markdown
@@ -41,7 +41,7 @@ body:
   - type: dropdown
     id: project-area
     attributes:
-      label: Project Area
+      label: '🗃️ Project Area'
       description: What area of the project do you think this bug is related to? This will help find an owner for the issue faster.
       options:
         - Unknown
@@ -66,7 +66,7 @@ body:
   - type: dropdown
     id: integration
     attributes:
-      label: External Integration
+      label: '🔗 External Integration'
       description: Is this issue related to an integration with any particular external system?
       options:
         - N/A
@@ -111,7 +111,7 @@ body:
       value: |
         ## Reproducing the bug
 
-        Being able to easily reproduce the bug will significantly increase the likelyhook that it can be identified and fixed. Please provide a repository where the bug can be reproduced, unless this is a critical bug that needs immediate attention.
+        Being able to easily reproduce the bug will significantly increase the likelihood that it can be identified and fixed. Please provide a repository where the bug can be reproduced, unless this is a critical bug that needs immediate attention.
 
         If you are unable to provide a reproduction repo, please explain the reproduction steps in as much detail as possible, and include the output of `yarn backstage-cli info` if relevant.
 
@@ -127,7 +127,7 @@ body:
   - type: textarea
     id: steps-to-reproduce
     attributes:
-      label: '🐾 Reproduction steps'
+      label: '🥾 Reproduction steps'
       description: 'How do you trigger this bug? Please walk us through it step by step.'
       placeholder: |
         1. Go to '...'
@@ -138,7 +138,7 @@ body:
   - type: checkboxes
     id: read-code-of-conduct
     attributes:
-      label: '🏢 Have you read the Code of Conduct?'
+      label: 'Have you read the Code of Conduct?'
       options:
         - label: 'I have read the [Code of Conduct](https://github.com/backstage/backstage/blob/master/CODE_OF_CONDUCT.md)'
           required: true
