--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -19,7 +19,14 @@ jobs:
         with:
           egress-policy: audit
 
+      - name: Parse issue form
+        uses: stefanbuck/github-issue-parser@v3
+        id: issue-parser
+        with:
+          template-path: .github/ISSUE_TEMPLATE/.common.yaml
+
       - name: Add advanced issue labels
         uses: redhat-plumbers-in-action/advanced-issue-labeler@v2
         with:
+          issue-form: ${{ steps.issue-parser.outputs.jsonString }}
           token: ${{ secrets.GITHUB_TOKEN }}
