--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -19,11 +19,27 @@ jobs:
         with:
           egress-policy: audit
 
+      - name: Fetch common issue template
+        id: fetch-template
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const response = await github.rest.repos.getContent({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              path: '.github/ISSUE_TEMPLATE/.common.yaml',
+              mediaType: {
+                format: 'raw'
+              }
+            });
+            require('fs').writeFileSync('.common.yaml', response.data);
+            core.setOutput('template-path', '.common.yaml');
+
       - name: Parse issue form
         uses: stefanbuck/github-issue-parser@v3
         id: issue-parser
         with:
-          template-path: .github/common-template-fields.yaml
+          template-path: ${{ steps.fetch-template.outputs.template-path }}
 
       - name: Add advanced issue labels
         uses: redhat-plumbers-in-action/advanced-issue-labeler@v2
