--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -19,21 +19,9 @@ jobs:
         with:
           egress-policy: audit
 
-      - name: Fetch common issue template
-        id: fetch-template
-        uses: actions/github-script@v7
+      - uses: actions/checkout@v4
         with:
-          script: |
-            const response = await github.rest.repos.getContent({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              path: '.github/ISSUE_TEMPLATE/.common.yaml',
-              mediaType: {
-                format: 'raw'
-              }
-            });
-            require('fs').writeFileSync('.common.yaml', response.data);
-            core.setOutput('template-path', '.common.yaml');
+          sparse-checkout: .github
 
       - name: Parse issue form
         uses: stefanbuck/github-issue-parser@v3
