--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -27,7 +27,7 @@ jobs:
         uses: stefanbuck/github-issue-parser@v3
         id: issue-parser
         with:
-          template-path: ${{ steps.fetch-template.outputs.template-path }}
+          template-path: .github/ISSUE_TEMPLATE/.common.yaml
 
       - name: Add advanced issue labels
         uses: redhat-plumbers-in-action/advanced-issue-labeler@v2
