--- a/.github/ISSUE_TEMPLATE/documentation.yaml
+++ b/.github/ISSUE_TEMPLATE/documentation.yaml
@@ -1,4 +1,4 @@
-name: '📖 Documentation Issue'
+name: '📖 Report a Documentation Issue'
 description: 'Report an issue in the Backstage documentation'
 labels:
   - type:documentation
