--- a/.github/ISSUE_TEMPLATE/maintenance.yaml
+++ b/.github/ISSUE_TEMPLATE/maintenance.yaml
@@ -1,4 +1,4 @@
-name: '🚧 Maintenance Task'
+name: '🚧 Track a Maintenance Task'
 description: 'Track a maintenance task'
 labels:
   - type:maintenance
