--- a/.github/ISSUE_TEMPLATE/suggestion.yaml
+++ b/.github/ISSUE_TEMPLATE/suggestion.yaml
@@ -1,4 +1,4 @@
-name: '💡 Change Suggestion'
+name: '💡 Suggest a Change'
 description: 'Suggest an idea for a new feature or change to Backstage'
 labels:
   - type:suggestion
