--- a/.github/workflows/automate_issue_labels.yml
+++ b/.github/workflows/automate_issue_labels.yml
@@ -14,7 +14,6 @@ jobs:
     steps:
       - name: Remove needs:triage label
         uses: actions-ecosystem/action-remove-labels@v1
-        if: >
-          ${{ startsWith(github.event.label.name, 'priority:') || ( startsWith(github.event.label.name, 'needs:') && github.event.label.name != 'needs:triage' ) }}
+        if: ${{ startsWith(github.event.label.name, 'priority:') || ( startsWith(github.event.label.name, 'needs:') && github.event.label.name != 'needs:triage' ) }}
         with:
           labels: needs:triage
